# hei-vpn

./: LICENSE  LICENSES.txt  README.md  build-appimage  build-appimage.sh  env-utils  hei_vpn.spec  pyproject.toml  requirements.txt
hei_vpn/: main.py  main.spec
hei_vpn/core/: __init__.py  browser.py  logger.py  utils.py  vpn.py  webdriver_helpers.py
resources/: AppRun  hei-vpn.desktop
